[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/UI/Heartbeat.gd" type="Script" id=1]
[ext_resource path="res://Art/Heartbeat.png" type="Texture" id=2]

[node name="BeatHolder" type="Control"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -123.0
margin_right = 140.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rhythm" type="Timer" parent="."]

[node name="Meter" type="ColorRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -97.0
margin_bottom = -89.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Center" type="ColorRect" parent="Meter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
color = Color( 0.0156863, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceRO" type="ColorRect" parent="Meter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
color = Color( 0.639216, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceRI" type="ColorRect" parent="Meter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
color = Color( 0.639216, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceLO" type="ColorRect" parent="Meter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
color = Color( 0.639216, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlaceLI" type="ColorRect" parent="Meter"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.0
margin_top = -20.0
margin_right = 5.0
margin_bottom = 20.0
color = Color( 0.639216, 0.117647, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Heart" type="Sprite" parent="."]
position = Vector2( 70.5567, 85.6606 )
scale = Vector2( 0.0813588, 0.0860325 )
texture = ExtResource( 2 )
vframes = 2

[node name="Heartbeat" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="MusicHolder" type="AudioStreamPlayer" parent="."]
[connection signal="timeout" from="Rhythm" to="." method="Beat"]
[connection signal="timeout" from="Heartbeat" to="." method="OffBeat"]
